feat: complete PTD user info backups
